# android_finalproject

./: Grayscale.cl  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GPIODriver.c  ImageProcessing.h  JNIDriver.c  OpenCLDriver.c  SegmentDriver.c  bmp.c
app/src/main/java/com/example/finalproject/: CameraPreview.java  GPIODriver.java  GPIOListener.java  MainActivity.java  SegmentDriver.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
